<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="medicine"
            type="dudukov.andrii.medicationsviewer.api.models.Medicine" />

    </data>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".descriptionActivity.DescriptionActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="450sp"
        android:layout_margin="10sp"
        android:background="@drawable/background_medicine_card"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tv_trade_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="2sp"
            android:textAlignment="center"
            android:text="@{medicine.getTradeLabel().getName()}"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:layout_marginStart="5sp"
            android:padding="2sp"
            android:text="@string/manufacturer_name"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@id/tv_trade_label" />

        <TextView
            android:id="@+id/tv_manufacturer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44sp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:text="@{medicine.manufacturer.name}"
            android:textColor="@android:color/black"
            android:textSize="13sp"
            android:textStyle="normal"
            android:textAlignment="textStart"
            android:layout_toEndOf="@id/textView2"
            android:layout_below="@id/tv_trade_label"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100sp"
            android:layout_marginStart="5sp"
            android:padding="2sp"
            android:paddingEnd="4sp"
            android:text="@string/packaging_description"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@id/tv_trade_label"/>

        <TextView
            android:id="@+id/tv_packaging_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="104sp"
            android:layout_marginStart="22sp"
            android:layout_marginEnd="10sp"
            android:text="@{medicine.packaging.description}"
            android:textColor="@android:color/black"
            android:textSize="13sp"
            android:textStyle="normal"
            android:textAlignment="textStart"
            android:layout_toEndOf="@id/textView3"
            android:layout_below="@id/tv_trade_label"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:layout_marginStart="5sp"
            android:padding="2sp"
            android:text="@string/composition_description"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:layout_below="@id/tv_trade_label" />

        <TextView
            android:id="@+id/tv_composition_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="164sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="10sp"
            android:text="@{medicine.composition.description}"
            android:textColor="@android:color/black"
            android:textSize="13sp"
            android:textStyle="normal"
            android:textAlignment="textStart"
            android:layout_toEndOf="@id/textView4"
            android:layout_below="@id/tv_trade_label"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="220sp"
            android:layout_marginStart="5sp"
            android:padding="2sp"
            android:text="@string/composition_inn"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@id/tv_trade_label"/>

        <TextView
            android:id="@+id/tv_composition_inn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="224sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="10sp"
            android:text="@{medicine.composition.inn.name}"
            android:textColor="@android:color/black"
            android:textSize="13sp"
            android:textStyle="normal"
            android:textAlignment="textStart"
            android:layout_toEndOf="@id/textView5"
            android:layout_below="@id/tv_trade_label"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:layout_marginStart="5sp"
            android:padding="2sp"
            android:text="@string/pharm_form"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@id/tv_trade_label"/>

        <TextView
            android:id="@+id/tv_pharm_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="284dp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="10sp"
            android:textAlignment="textStart"
            android:text="@{medicine.composition.pharmForm.name}"
            android:textColor="@android:color/black"
            android:textSize="13sp"
            android:textStyle="normal"
            android:layout_toEndOf="@id/textView5"
            android:layout_below="@id/tv_trade_label"/>
    </RelativeLayout>
</RelativeLayout>
</layout>